--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
   src: url(assets/Norse-Bold.otf);
 }
 :root {
+  --background-color: #f9f9f9;
   --button-bg: #596d48;
   --border-color: #e5e7eb;
   font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
@@ -59,16 +60,74 @@ body {
   display: flex;
   flex-direction: column;
   height: 35vh;
+  justify-content: flex-end;
+  gap: 30px;
+  padding: 2rem 5rem 2rem 2rem;
+  font-weight: bold;
+  font-size: 1.4rem;
+  background-color: var(--background-color);
+}
+
+.cont2-first > p:nth-child(2) {
+  margin-bottom: 2rem;
 }
 
 .cont2-second {
   display: flex;
   flex-direction: column;
-  height: 30vh;
+  -webkit-box-shadow: 5px 5px 2px 0px #aaaaaa;
+  box-shadow: 5px 5px 2px 0px #aaaaaa;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin: 2rem;
+}
+
+legend {
+  font-size: 1.4rem;
+  font-weight: bold;
+}
+
+label {
+  letter-spacing: 0.1rem;
+}
+
+input {
+  width: 18rem;
+  height: 1.2rem;
+}
+
+button {
+  background-color: var(--button-bg);
+  color: white;
+  margin: 3rem 0 1rem 3rem;
+  width: 12rem;
+  height: 3rem;
+  border-radius: 0.6rem;
+  font-size: 1rem;
+  font-weight: bold;
 }
 
 .cont2-third {
   display: flex;
   flex-direction: column;
-  height: 35vh;
+  background-color: var(--background-color);
+}
+
+.cont2-third > p {
+  margin-left: 3rem;
+}
+
+.form-cont {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 4rem;
+}
+
+.form-input {
+  display: flex;
+  flex-direction: column;
 }
