--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,8 @@ body {
 .container2 {
   height: 100vh;
   width: 65vw;
+  display: flex;
+  flex-direction: column;
 }
 
 .logo {
@@ -59,9 +61,8 @@ body {
 .cont2-first {
   display: flex;
   flex-direction: column;
-  height: 35vh;
   justify-content: flex-end;
-  gap: 30px;
+  gap: 20px;
   padding: 2rem 5rem 2rem 2rem;
   font-weight: bold;
   font-size: 1.4rem;
@@ -77,6 +78,8 @@ body {
   flex-direction: column;
   -webkit-box-shadow: 5px 5px 2px 0px #aaaaaa;
   box-shadow: 5px 5px 2px 0px #aaaaaa;
+  position: relative;
+  z-index: 1;
 }
 
 form {
@@ -115,6 +118,7 @@ button {
   display: flex;
   flex-direction: column;
   background-color: var(--background-color);
+  flex: 1;
 }
 
 .cont2-third > p {
