--- a/styles.css
+++ b/styles.css
@@ -163,13 +163,14 @@ input:valid {
   }
 
   .container1 {
-    width: 82vh;
+    height: 100vh;
+    width: 100vw;
     background-position: center;
     background-size: cover;
   }
 
   .container2 {
-    width: 80vh;
+    width: 100vw;
   }
 
   .cont2-third {
