--- a/styles.css
+++ b/styles.css
@@ -10,12 +10,45 @@
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
+/* html elements */
 body {
   margin: 0;
   padding: 0;
   display: flex;
 }
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin: 2rem;
+}
 
+legend {
+  font-size: 1.4rem;
+  font-weight: bold;
+}
+
+label {
+  letter-spacing: 0.1rem;
+}
+
+input {
+  width: 18rem;
+  height: 1.2rem;
+}
+
+button {
+  background-color: var(--button-bg);
+  color: white;
+  margin: 3rem 0 1rem 3rem;
+  width: 12rem;
+  height: 3rem;
+  border-radius: 0.6rem;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+/*containers with classes */
 .container1 {
   position: relative;
   height: 100vh;
@@ -80,38 +113,6 @@ body {
   box-shadow: 5px 5px 2px 0px #aaaaaa;
   position: relative;
   z-index: 1;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  margin: 2rem;
-}
-
-legend {
-  font-size: 1.4rem;
-  font-weight: bold;
-}
-
-label {
-  letter-spacing: 0.1rem;
-}
-
-input {
-  width: 18rem;
-  height: 1.2rem;
-}
-
-button {
-  background-color: var(--button-bg);
-  color: white;
-  margin: 3rem 0 1rem 3rem;
-  width: 12rem;
-  height: 3rem;
-  border-radius: 0.6rem;
-  font-size: 1rem;
-  font-weight: bold;
 }
 
 .cont2-third {
